unpackaged/main/default/objects/Account/fields/Intellecutal_Property_Rights_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Intellecutal_Property_Rights_Ownership__c</fullName>
    <label>Intellecutal Property Rights Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Not Included</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>