unpackaged/main/default/objects/Account/fields/Invoice_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Indicator__c</fullName>
    <label>Invoice Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>GES Amsterdam</fullName>
                <isActive>false</isActive>
                <label>GES Amsterdam</label>
            </value>
            <value>
                <fullName>GES Germany</fullName>
                <isActive>false</isActive>
                <label>GES Germany</label>
            </value>
            <value>
                <fullName>GES Poland</fullName>
                <isActive>false</isActive>
                <label>GES Poland</label>
            </value>
            <value>
                <fullName>GES UAE</fullName>
                <isActive>false</isActive>
                <label>GES UAE</label>
            </value>
            <value>
                <fullName>GES UK Coventry</fullName>
                <isActive>false</isActive>
                <label>GES UK Coventry</label>
            </value>
            <value>
                <fullName>GES UK Sheffield</fullName>
                <isActive>false</isActive>
                <label>GES UK Sheffield</label>
            </value>
            <value>
                <fullName>Spiro Germany</fullName>
            </value>
            <value>
                <fullName>Spiro Netherlands</fullName>
            </value>
            <value>
                <fullName>Spiro Poland</fullName>
            </value>
            <value>
                <fullName>Spiro Qatar</fullName>
            </value>
            <value>
                <fullName>Spiro Saudi Arabia</fullName>
            </value>
            <value>
                <fullName>Spiro UAE</fullName>
            </value>
            <value>
                <fullName>Spiro UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>