unpackaged/main/default/objects/Account/fields/Is_Account_Type_Populated__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Type_Populated__c</fullName>
    <formula>IF( ISBLANK(TEXT(Type)) || ISPICKVAL( Type , &quot;-&quot;) , &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Account Type Populated?</label>
    <type>Text</type>
</CustomField>