unpackaged/main/default/objects/Account/fields/Is_Phone_Populated__c.field-meta.xml
<CustomField>
    <fullName>Is_Phone_Populated__c</fullName>
    <formula>if(isblank( Phone ), &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Phone Populated</label>
    <type>Text</type>
</CustomField>