unpackaged/main/default/objects/Account/fields/Is_Portfolio_Code_Populated__c.field-meta.xml
<CustomField>
    <fullName>Is_Portfolio_Code_Populated__c</fullName>
    <formula>IF(ISPICKVAL(Portfolio__c,&quot;Yes&quot;),IF(ISBLANK(TEXT(Portfolio_Code__c)),&quot;No&quot;,&quot;Yes&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Portfolio Code Populated?</label>
    <type>Text</type>
</CustomField>