unpackaged/main/default/objects/Account/fields/Item_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Item_Pricing__c</fullName>
    <description>Blitz field for Account Integration</description>
    <label>Item Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANNA</fullName>
            </value>
            <value>
                <fullName>BREWERY</fullName>
            </value>
            <value>
                <fullName>BRITROW</fullName>
            </value>
            <value>
                <fullName>EC&amp;O</fullName>
            </value>
            <value>
                <fullName>EXCEL</fullName>
            </value>
            <value>
                <fullName>FA</fullName>
            </value>
            <value>
                <fullName>ICCLON</fullName>
            </value>
            <value>
                <fullName>ITV</fullName>
            </value>
            <value>
                <fullName>LIVE</fullName>
            </value>
            <value>
                <fullName>MANCENT</fullName>
            </value>
            <value>
                <fullName>MICROSOFT</fullName>
            </value>
            <value>
                <fullName>MORGANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>