unpackaged/main/default/objects/Account/fields/Janitorial_GES_Commission__c.field-meta.xml
<CustomField>
    <fullName>Janitorial_GES_Commission__c</fullName>
    <label>Cleaning Provider GES Commission</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>