unpackaged/main/default/objects/Account/fields/Key_Facility_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Key_Facility_Contact_Email__c</fullName>
    <formula>Key_Facility_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Facility Contact Email</label>
    <type>Text</type>
</CustomField>