unpackaged/main/default/objects/Account/fields/LMS_Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>LMS_Firm_ID__c</fullName>
    <externalId>true</externalId>
    <label>LMS Firm ID</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>