unpackaged/main/default/objects/Account/fields/Main_State__c.field-meta.xml
<CustomField>
    <fullName>Main_State__c</fullName>
    <description>Blitz field for Account Integration</description>
    <label>Main State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>