unpackaged/main/default/objects/Account/fields/Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Match_Confidence__c</fullName>
    <label>Data Com Match Confidence</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>