unpackaged/main/default/objects/Account/fields/ME_SOP_ID__c.field-meta.xml
<CustomField>
    <fullName>ME_SOP_ID__c</fullName>
    <externalId>true</externalId>
    <label>ME SOP ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>