unpackaged/main/default/objects/Account/fields/Melissa_Address__c.field-meta.xml
<CustomField>
    <fullName>Melissa_Address__c</fullName>
    <label>Melissa Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>