unpackaged/main/default/objects/Account/fields/Melissa_City__c.field-meta.xml
<CustomField>
    <fullName>Melissa_City__c</fullName>
    <label>Melissa City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>