unpackaged/main/default/objects/Account/fields/Melissa_Country__c.field-meta.xml
<CustomField>
    <fullName>Melissa_Country__c</fullName>
    <label>Melissa Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>