unpackaged/main/default/objects/Account/fields/Melissa_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Melissa_Integration_Status__c</fullName>
    <label>Melissa Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>