unpackaged/main/default/objects/Account/fields/Melissa_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Melissa_Postal_Code__c</fullName>
    <label>Melissa Postal Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>