unpackaged/main/default/objects/Account/fields/Melissa_Results__c.field-meta.xml
<CustomField>
    <fullName>Melissa_Results__c</fullName>
    <label>Melissa Results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>