unpackaged/main/default/objects/Account/fields/Melissa_State__c.field-meta.xml
<CustomField>
    <fullName>Melissa_State__c</fullName>
    <label>Melissa State</label>
    <length>60</length>
    <type>Text</type>
</CustomField>