unpackaged/main/default/objects/Account/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <inlineHelpText>Blitz Member - For Blitz Integration</inlineHelpText>
    <label>Blitz Member</label>
    <length>20</length>
    <type>Text</type>
</CustomField>