unpackaged/main/default/objects/Account/fields/Merge_Flag__c.field-meta.xml
<CustomField>
    <fullName>Merge_Flag__c</fullName>
    <defaultValue>&quot;Y&quot;</defaultValue>
    <description>The merge flag for enabling auto Account records merge during Demand Tool Job</description>
    <label>Merge Flag</label>
    <length>2</length>
    <type>Text</type>
</CustomField>