unpackaged/main/default/objects/Account/fields/Merge_Type__c.field-meta.xml
<CustomField>
    <fullName>Merge_Type__c</fullName>
    <description>This field provides the Account Merge Type</description>
    <label>Merge Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>