unpackaged/main/default/objects/Account/fields/MSA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Expiration_Date__c</fullName>
    <label>MSA Expiration Date</label>
    <type>Date</type>
</CustomField>