unpackaged/main/default/objects/Account/fields/NBD_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>NBD_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field that captures who the new business development sales person is at the account</description>
    <label>NBD Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>