unpackaged/main/default/objects/Account/fields/Non_Std_Assignment_Change_in_Control__c.field-meta.xml
<CustomField>
    <fullName>Non_Std_Assignment_Change_in_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Std Assignment /Change in Control</label>
    <type>Checkbox</type>
</CustomField>