unpackaged/main/default/objects/Account/fields/Onpeak_Housing_Contract_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Onpeak_Housing_Contract_Exp_Date__c</fullName>
    <inlineHelpText>Used only for OnPeak Agreements with CVBs,
CVB contract expiration date.</inlineHelpText>
    <label>OnPeak CVB Housing Contract Exp Date</label>
    <type>Date</type>
</CustomField>