unpackaged/main/default/objects/Account/fields/Open_Opprtunities__c.field-meta.xml
<CustomField>
    <fullName>Open_Opprtunities__c</fullName>
    <description>Store count of opportunities of record types (E&amp;D Projects, Events &amp; Experiential, EMEA Custom Build)</description>
    <label>Open Opprtunities</label>
    <summaryFilterItems>
        <field>Opportunity.Open__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>