unpackaged/main/default/objects/Account/fields/ORACLE_AR_CUST_ACCOUNT_ID__c.field-meta.xml
<CustomField>
    <fullName>ORACLE_AR_CUST_ACCOUNT_ID__c</fullName>
    <description>CUST_ACCOUNT_ID column in Oracle AR table HZ_CUST_ACCOUNTS_ALL</description>
    <label>Oracle AR Customer ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>