unpackaged/main/default/objects/Account/fields/ORACLE_AR_CUST_CREATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>ORACLE_AR_CUST_CREATION_DATE__c</fullName>
    <description>Date and time when customer was created in Oracle AR</description>
    <label>Oracle AR Customer Created</label>
    <type>DateTime</type>
</CustomField>