unpackaged/main/default/objects/Account/fields/ORACLE_AR_CUST_LAST_UPDATE_DATE__c.field-meta.xml
<CustomField>
    <fullName>ORACLE_AR_CUST_LAST_UPDATE_DATE__c</fullName>
    <description>Date and time when customer was last modified in Oracle AR</description>
    <label>Oracle AR Customer Last Modified</label>
    <type>DateTime</type>
</CustomField>