unpackaged/main/default/objects/Account/fields/ORACLE_AR_CUST_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>ORACLE_AR_CUST_NUMBER__c</fullName>
    <description>GES Customer number. ACCOUNT_NUMBER column from AR HZ_CUST_ACOCUNTS_ALL table.</description>
    <label>Oracle AR Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>