unpackaged/main/default/objects/Account/fields/ORACLE_AR_CUST_STATUS__c.field-meta.xml
<CustomField>
    <fullName>ORACLE_AR_CUST_STATUS__c</fullName>
    <description>Status of Customer record in Oracle AR</description>
    <label>Oracle AR Customer Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>