unpackaged/main/default/objects/Account/fields/Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager__c</fullName>
    <formula>Owner.Manager.FirstName  &amp;&quot; &quot;  &amp;  Owner.Manager.LastName</formula>
    <label>Owner&#39;s Manager</label>
    <type>Text</type>
</CustomField>