unpackaged/main/default/objects/Account/fields/Parent_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Business_Name__c</fullName>
    <description>Parent Business Name from Data.com</description>
    <label>Parent Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>