unpackaged/main/default/objects/Account/fields/Parent_Duns_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Duns_Number__c</fullName>
    <description>It is used to capture the parent duns number for the account.</description>
    <label>Parent Duns Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>