unpackaged/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CT1-100% DEP NET 30</fullName>
            </value>
            <value>
                <fullName>CT2-55% DEP NET 30</fullName>
            </value>
            <value>
                <fullName>CT3-75% DEP NET 30</fullName>
            </value>
            <value>
                <fullName>CT4-100% BEFORE PROD</fullName>
            </value>
            <value>
                <fullName>CT5-CONTRACT TERMS</fullName>
            </value>
            <value>
                <fullName>CT6-33-33% DEP NET</fullName>
            </value>
            <value>
                <fullName>CT7-50-25% DEP NET 30</fullName>
            </value>
            <value>
                <fullName>CT8-NET 30</fullName>
            </value>
            <value>
                <fullName>CT9 -100% PRIOR SHIP</fullName>
            </value>
            <value>
                <fullName>CTL - 100% FINAL LOAD OUT</fullName>
            </value>
            <value>
                <fullName>CTLG-50% DEP NET 30</fullName>
            </value>
            <value>
                <fullName>T10 - BALANCE DUE NET 45</fullName>
            </value>
            <value>
                <fullName>T11 - BALANCE DUE NET 60</fullName>
            </value>
            <value>
                <fullName>T12-75% DEP NET 10</fullName>
            </value>
            <value>
                <fullName>T13-55% DEP NET 45</fullName>
            </value>
            <value>
                <fullName>T14-75% DEP NET 45</fullName>
            </value>
            <value>
                <fullName>T15-75% DEP NET 60</fullName>
            </value>
            <value>
                <fullName>T16-55% DEP NET 60</fullName>
            </value>
            <value>
                <fullName>T17-50% DEP NET 45</fullName>
            </value>
            <value>
                <fullName>T18-2% 20 NET 60</fullName>
            </value>
            <value>
                <fullName>T19-2% 10 NET 30</fullName>
            </value>
            <value>
                <fullName>T20 - 15% DEP 50% INT N 60</fullName>
            </value>
            <value>
                <fullName>T21 - 50% DEP 50% INT N 30</fullName>
            </value>
            <value>
                <fullName>T22 - 25% DEP NET 30</fullName>
            </value>
            <value>
                <fullName>T23 - 50% DEP 2% 15 NET 45</fullName>
            </value>
            <value>
                <fullName>T24-50% DEP NET 30</fullName>
            </value>
            <value>
                <fullName>T25-50% DEP 40% INT N 30</fullName>
            </value>
            <value>
                <fullName>T26-2.5% 15 NET 90</fullName>
            </value>
            <value>
                <fullName>T27-55% DEP NET 30</fullName>
            </value>
            <value>
                <fullName>T28 - NET 15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>