unpackaged/main/default/objects/Account/fields/Phone_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Phone_Visibility__c</fullName>
    <formula>IF( Is_Phone_Populated__c = &quot;Yes&quot;, 1, 
IF 
(Is_Phone_Populated__c = &quot;No&quot;, 1, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Visibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>