unpackaged/main/default/objects/Account/fields/Presentation_Date__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Date__c</fullName>
    <label>Presentation Date</label>
    <type>Date</type>
</CustomField>