unpackaged/main/default/objects/Account/fields/Primary_Contact_Identified__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact Identified</label>
    <type>Checkbox</type>
</CustomField>