unpackaged/main/default/objects/Account/fields/Processed_Flag__c.field-meta.xml
<CustomField>
    <fullName>Processed_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IT is used in Account setup hierarchy class.</description>
    <label>Processed Flag</label>
    <type>Checkbox</type>
</CustomField>