unpackaged/main/default/objects/Account/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Under_Contract__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>3D Exhibits</fullName>
            </value>
            <value>
                <fullName>Apple Rock displays</fullName>
            </value>
            <value>
                <fullName>Atmosphere</fullName>
            </value>
            <value>
                <fullName>Catalyst Exhibits</fullName>
            </value>
            <value>
                <fullName>CEP</fullName>
            </value>
            <value>
                <fullName>Condit</fullName>
            </value>
            <value>
                <fullName>CSI</fullName>
            </value>
            <value>
                <fullName>Czarnowski</fullName>
            </value>
            <value>
                <fullName>Derse</fullName>
            </value>
            <value>
                <fullName>Display Works</fullName>
            </value>
            <value>
                <fullName>Exhibit Fair</fullName>
            </value>
            <value>
                <fullName>Exhibit Plus</fullName>
            </value>
            <value>
                <fullName>Exhibit Tree</fullName>
            </value>
            <value>
                <fullName>Exhibit Works</fullName>
            </value>
            <value>
                <fullName>Exhibit Worx</fullName>
            </value>
            <value>
                <fullName>Expo Group</fullName>
            </value>
            <value>
                <fullName>Expo Technique</fullName>
            </value>
            <value>
                <fullName>Fern</fullName>
            </value>
            <value>
                <fullName>Freddie George</fullName>
            </value>
            <value>
                <fullName>Freeman</fullName>
            </value>
            <value>
                <fullName>George P. Johnson</fullName>
            </value>
            <value>
                <fullName>GES (US)</fullName>
            </value>
            <value>
                <fullName>Gilbert Displays</fullName>
            </value>
            <value>
                <fullName>Group Delphi</fullName>
            </value>
            <value>
                <fullName>H.B. Stubbs</fullName>
            </value>
            <value>
                <fullName>Hamilton Displays</fullName>
            </value>
            <value>
                <fullName>Jack Morton Productions</fullName>
            </value>
            <value>
                <fullName>Journey</fullName>
            </value>
            <value>
                <fullName>Kubrick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>