unpackaged/main/default/objects/Account/fields/R2_ID__c.field-meta.xml
<CustomField>
    <fullName>R2_ID__c</fullName>
    <description>Blitz field for Contact Integration</description>
    <externalId>true</externalId>
    <inlineHelpText>The R2 Customer ID</inlineHelpText>
    <label>R2 Customer ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>