unpackaged/main/default/objects/Account/fields/R2_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>R2_Sales_Person__c</fullName>
    <inlineHelpText>From R2</inlineHelpText>
    <label>R2 Sales Person</label>
    <length>50</length>
    <type>Text</type>
</CustomField>