unpackaged/main/default/objects/Account/fields/Rental_Booths_GES_Commission__c.field-meta.xml
<CustomField>
    <fullName>Rental_Booths_GES_Commission__c</fullName>
    <label>Rental Booths GES Commission</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>