unpackaged/main/default/objects/Account/fields/Rigging_Provider_Contract_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Rigging_Provider_Contract_Exp_Date__c</fullName>
    <label>Rigging Provider Contract Exp Date</label>
    <type>Date</type>
</CustomField>