unpackaged/main/default/objects/Account/fields/Show_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Show_Opportunity__c</fullName>
    <label>Show Opportunity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>