unpackaged/main/default/objects/Account/fields/Source_Exhibitor_Upload__c.field-meta.xml
<CustomField>
    <fullName>Source_Exhibitor_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Hidden field. TRUE when the source of the Account is the Exhibitor Upload Routine.</inlineHelpText>
    <label>Source Exhibitor Upload</label>
    <type>Checkbox</type>
</CustomField>