unpackaged/main/default/objects/Account/fields/Spiro_2024_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Spiro_2024_Revenue__c</fullName>
    <description>Captures annual closed won revenue</description>
    <label>Spiro 2024 Revenue</label>
    <summarizedField>Opportunity.Won_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>E&amp;D - Projects,E&amp;D - Projects - Proposal,E&amp;D - Projects - Read Only,Event &amp; Experiential, EMEA - Custom Build</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Show_Open_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2024</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Show_Close_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2024</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>