unpackaged/main/default/objects/Account/fields/Spiro_Account__c.field-meta.xml
<CustomField>
    <fullName>Spiro_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spiro</label>
    <type>Checkbox</type>
</CustomField>