unpackaged/main/default/objects/Account/fields/Sponsorship_Provider_Contract_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Provider_Contract_Exp_Date__c</fullName>
    <label>Sponsorship Provider Contract Exp Date</label>
    <type>Date</type>
</CustomField>