unpackaged/main/default/objects/Account/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NonVatable</label>
    <type>Checkbox</type>
</CustomField>