unpackaged/main/default/objects/Account/fields/Top2Top_Done__c.field-meta.xml
<CustomField>
    <fullName>Top2Top_Done__c</fullName>
    <formula>IF(Top2Top_Completed__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top2Top Done?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>