unpackaged/main/default/objects/Account/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>For Craigs report</description>
    <label>Total Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Show_Close_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Show_Close_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2024</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>CR, CV</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Field Security-LPM, Field Security-IA, Master Show Occurrence, Sales Rep Show Occurrence, Field Security-PS, Field Security-NE, Field Security-CV, Field Security-CR, Field Security-LR, Field Security-DB, Field Security-LO, Field Security-LPE</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>