unpackaged/main/default/objects/Account/fields/Type_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Type_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Type Reviewed</label>
    <type>Checkbox</type>
</CustomField>