unpackaged/main/default/objects/Account/fields/UK_SOP_ID__c.field-meta.xml
<CustomField>
    <fullName>UK_SOP_ID__c</fullName>
    <externalId>true</externalId>
    <label>UK SOP ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>