unpackaged/main/default/objects/Account/fields/Vat_Number__c.field-meta.xml
<CustomField>
    <fullName>Vat_Number__c</fullName>
    <inlineHelpText>VAT number must be prefixed with country code from above list.</inlineHelpText>
    <label>Vat Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>