unpackaged/main/default/objects/Account/fields/Viad_Reported__c.field-meta.xml
<CustomField>
    <fullName>Viad_Reported__c</fullName>
    <label>Viad Reported</label>
    <length>255</length>
    <type>Text</type>
</CustomField>