unpackaged/main/default/objects/Account/fields/VIP_Client__c.field-meta.xml
<CustomField>
    <fullName>VIP_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Label this as true if this client needs special attention or visibility from within new cases or service requests.</description>
    <label>VIP Client</label>
    <type>Checkbox</type>
</CustomField>