unpackaged/main/default/objects/Account/fields/Visit_Account_Drop_Down__c.field-meta.xml
<CustomField>
    <fullName>Visit_Account_Drop_Down__c</fullName>
    <label>Visit Account Drop Down</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>