unpackaged/main/default/objects/Account/fields/Visit_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Visit_Account_Name__c</fullName>
    <label>Visit Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>