unpackaged/main/default/objects/Account/fields/Visit_Linked__c.field-meta.xml
<CustomField>
    <fullName>Visit_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Linked</label>
    <type>Checkbox</type>
</CustomField>