unpackaged/main/default/objects/Account/fields/xBlitz_Updated_9_2015__c.field-meta.xml
<CustomField>
    <fullName>xBlitz_Updated_9_2015__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary System Field to identify which accounts were updated from a manual  data load. Delete this field after validation. 9-4-15</description>
    <label>xBlitz Updated 9_2015</label>
    <type>Checkbox</type>
</CustomField>