unpackaged/main/default/objects/Account/fields/ZoomInfo_Job_Function__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Job_Function__c</fullName>
    <label>ZoomInfo Job Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>