unpackaged/main/default/objects/Account/recordTypes/Contractor.recordType-meta.xml
<RecordType>
    <fullName>Contractor</fullName>
    <active>true</active>
    <description>Only to be used by EMEA Credit control</description>
    <label>Contractor</label>
</RecordType>