unpackaged/main/default/objects/Account/recordTypes/Exhibitor.recordType-meta.xml
<RecordType>
    <fullName>Exhibitor</fullName>
    <active>true</active>
    <description>E&amp;D Exhibitor Accounts</description>
    <label>Exhibitor</label>
</RecordType>