unpackaged/main/default/objects/Account/recordTypes/Facility.recordType-meta.xml
<RecordType>
    <fullName>Facility</fullName>
    <active>true</active>
    <description>A physical location where a Show will occur.</description>
    <label>Facility</label>
</RecordType>