unpackaged/main/default/objects/Account/recordTypes/Firm.recordType-meta.xml
<RecordType>
    <fullName>Firm</fullName>
    <active>true</active>
    <description>A Management Company, Sponsor, Contractor (Prime and Sub), and Competitor related to Shows and Show Occurrences.</description>
    <label>Firm</label>
</RecordType>